Update frontend with Render backend URL

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <script>
-    const API_URL = 'REPLACE_WITH_BACKEND_URL'; // Replace with your Render backend URL
+    const API_URL = 'https://desifood-chatbot-1.onrender.com'; // Backend API URL
     const messagesDiv = document.getElementById('messages');
     const userInput = document.getElementById('userInput');
 
